--- a/chrome/package.json
+++ b/chrome/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^2.5.3",
     "react-dom": "^17.0.2",
     "react-rainbow-components": "^1.26.0",
     "react-router-dom": "^5.2.0",
